ft. Lock & AQS(Sync) jdk11 not support lombok (perhaps)